reshape schema locations and resolver; fix use_template;

--- a/ckanext/jsonschema/templates/package/snippets/package_form.html
+++ b/ckanext/jsonschema/templates/package/snippets/package_form.html
@@ -85,7 +85,9 @@
         data-module-schema="{{ schema }}"
         data-module-body="{{ body }}"
         data-module-type="{{ schema_type }}"
-        data-module-ckan-url="{{ h.url_for('/',_external=True) }}"/>
+        data-module-ckan-url="{{ h.url_for('/',_external=True) }}"
+        data-module-use-template = false
+      />
 
       <!--  -->
       <div id="editor">
