Created jsonschema_view_form; FIXes to form; Jsonschema fields in package body (not extras)

--- a/ckanext/jsonschema/templates/package/snippets/resource_form.html
+++ b/ckanext/jsonschema/templates/package/snippets/resource_form.html
@@ -1,4 +1,3 @@
-{% import 'macros/custom_form.html' as custom_form %}
 {% ckan_extends %}
   
 {% if dataset_type %}
@@ -16,47 +15,37 @@
   {% endif %}
 {% endblock %}
 
+
 {% block errors %}
   {% if jsonschema %}
+    {% import 'macros/custom_form.html' as custom_form %}
     {{ custom_form.custom_errors(error_summary) }}
   {% else %}
     {{ form.errors(error_summary) }}
   {% endif %}
 {% endblock %}
 
-{% if jsonschema %}
-  {% set jsonschema_type_from_request = request.params.get('selected_jsonschema_type') %}
-  {% if jsonschema_type_from_request %}
-    {% set jsonschema_type = jsonschema_type_from_request %}
-    {% set use_template = True %}
-  {% else %}
-    {% set use_template = False %}
-    {% set jsonschema_type = h.jsonschema_get_resource_type(data) %}
-    {% if not jsonschema_type %}
-      {% set jsonschema_type = 'dataset-resource' %}
-    {% endif %}
-  {% endif %}
+
+{% set jsonschema_type = h.jsonschema_get_resource_type(data) %}
+
+{% if not jsonschema_type %}
+  {% set jsonschema_type = 'dataset-resource' %}
 {% endif %}
 
-{% block basic_fields %}
-  <p>
-    <label for="select-resource-type">{{_('Resource type')}}</label>
-    <!-- 
-      This select doesn't have a name attribute (name="{{TYPE_KEY}}") so that it's value is not sent when submitting the form
-      This is used only to select the needed resource type; if it is a jsonschema type resource, the type is
-      inlcuded in the form below
-    -->
-    <select id="select-resource-type" onChange="javascript:select_jsonschema_type(value)">
-      {% for resource_type in resource_types %}
-        {% if resource_type == jsonschema_type %}
-          <option value="{{ resource_type }}" selected>{{ h.jsonschema_get_label_from_registry(resource_type) }}</option>
-        {% else %}
-          <option value="{{ resource_type }}" >{{ h.jsonschema_get_label_from_registry(resource_type) }}</option>
-        {% endif %}
-      {% endfor %}
-    </select>
-  </p>
+{% set use_template = False %}
+{% set jsonschema_type_from_request = request.params.get('selected_jsonschema_type') %}
 
+{% if jsonschema_type_from_request %}
+  {% set jsonschema_type = jsonschema_type_from_request %}
+  {% set use_template = True %}
+{% endif %}
+
+
+{% block basic_fields %}
+
+  {% set filtered_types = resource_types %}
+  <!-- Adds the select for the jsonschema_type -->
+  {% include 'snippets/jsonschema_type_select.html' %}
 
   {% block scripts %}
       {# which is the jsonschema type in this context/environment #}
@@ -77,42 +66,46 @@
       {% endif %}
   {% endblock %}
 
-    {% block basic_fields_name %}
-      {% if h.jsonschema_is_supported_ckan_field(jsonschema_type, 'name') %}
-        {{super()}}
-      {% endif %}   
-    {% endblock %}
+  {% block basic_fields_name %}
+    {% if h.jsonschema_is_supported_ckan_field(jsonschema_type, 'name') %}
+      {{super()}}
+    {% endif %}   
+  {% endblock %}
 
-    {% block basic_fields_description %}
-      {% if h.jsonschema_is_supported_ckan_field(jsonschema_type, 'description') %}
-        {{super()}}
-      {% endif %}
-    {% endblock %}
-
-    {% block basic_fields_format %}
-      {% if h.jsonschema_is_supported_ckan_field(jsonschema_type, 'format') %}
-        {{super()}}
-      {% endif %}
-    {% endblock %}
-
-    {% block basic_fields_url %}
-      {% if h.jsonschema_is_supported_ckan_field(jsonschema_type, 'url') %}
-        {{super()}}
-      {% endif %}
-    {% endblock %}
-
-
-    {% if jsonschema is defined %}
-      {% if h.jsonschema_is_supported_jsonschema_field(jsonschema_type, 'body') %}
-        
-        {% set template = h.jsonschema_get_template(jsonschema_type) %}
-        {% set body = h.jsonschema_as_json(h.jsonschema_get_resource_body(data, template)) %}
-        {% set opt = h.jsonschema_as_json(h.jsonschema_get_resource_opt(data)) %}
-        
-        {% include 'snippets/jsonschema_form.html' %}
-        
-        {% endif %}
+  {% block basic_fields_description %}
+    {% if h.jsonschema_is_supported_ckan_field(jsonschema_type, 'description') %}
+      {{super()}}
     {% endif %}
+  {% endblock %}
+
+  {% block basic_fields_format %}
+    {% if h.jsonschema_is_supported_ckan_field(jsonschema_type, 'format') %}
+      {{super()}}
+    {% endif %}
+  {% endblock %}
+
+  {% block basic_fields_url %}
+    {% if h.jsonschema_is_supported_ckan_field(jsonschema_type, 'url') %}
+      {{super()}}
+    {% endif %}
+  {% endblock %}
+
+
+  {% if jsonschema is defined %}
+    {% if h.jsonschema_is_supported_jsonschema_field(jsonschema_type, 'body') %}
+      
+      {% set template = h.jsonschema_get_template(jsonschema_type) %}
+      {% set body = h.jsonschema_as_json(h.jsonschema_get_resource_body(data, template)) %}
+      {% set opt = h.jsonschema_as_json(h.jsonschema_get_resource_opt(data)) %}
+
+      <!-- Needed to pass through the variables... -->
+      {% set use_template = use_template %}
+      <!-- set jsonschema_type = jsonschema_type  -->
+
+      {% include 'snippets/jsonschema_form.html' %}
+      
+    {% endif %}
+  {% endif %}
 {% endblock %}
 
 {% block metadata_fields %}
