--- a/ckanext/jsonschema/templates/source/read.html
+++ b/ckanext/jsonschema/templates/source/read.html
@@ -61,7 +61,8 @@
 {% set opt = h.jsonschema_get_package_opt(pkg) %}
 
 <p>
-  
+<!-- TODO: BLOCK REUSE 4 PACKAGE templates/package/resource_read.html -->
+<!-- REGISTRY TYPE BASED GUARD supported_jsonschema_fields-->
 </p>
 <p>
   <div>
