--- a/ckanext/jsonschema/templates/snippets/jsonschema_form.html
+++ b/ckanext/jsonschema/templates/snippets/jsonschema_form.html
@@ -4,7 +4,7 @@
     - body
     - jsonschema_type
     - use_template
-    - element: the full resource or view to be passed to the frontend (e.g. to retrieve the id)
+    - data_dict: the full resource or view to be passed to the frontend (e.g. to retrieve the id)
 -->
 
 
@@ -72,7 +72,8 @@
     data-module-body-key = "{{BODY_KEY}}"
     data-module-type-key = "{{TYPE_KEY}}"
     data-module-opt-key = "{{OPT_KEY}}"
-    data-module-element = "{{element}}"/>
+    data-module-data-dict = "{{data_dict}}"
+/>
 
 <div id="editor">
     <p>
