Created jsonschema_buttons template; Moved plugin specific templates into own folder

--- a/ckanext/jsonschema/templates/package/resource_read.html
+++ b/ckanext/jsonschema/templates/package/resource_read.html
@@ -2,14 +2,6 @@
 
 {% import 'source/macros.html' as reader %}
 
-<!-- TODO: USE EXISTING HELPER OR DEFINE SOME -->
-{% if dataset_type %}
-    {% set resource_types = h.jsonschema_handled_resource_types(dataset_type) %}
-    {% if resource_types and resource_types | length > 0 %}
-        {% set jsonschema = true %}
-    {% endif %}
-{% endif %}
-
 {% block primary_content %}
   {% block resource_additional_information %}
     {{super()}}
@@ -18,66 +10,15 @@
       <section class="module">
         {% block resource_additional_information_inner %}
         {% endblock %}
-        <!-- TODO: USE EXISTING HELPER OR DEFINE SOME -->
-        {% if jsonschema is defined %}
-  
+
+        {% set jsonschema_type = h.jsonschema_get_resource_type(res) %}
+        {% set is_jsonschema = jsonschema_type and jsonschema_type in h.jsonschema_handled_resource_types(dataset_type) %}
+
+        {% if is_jsonschema %}
           {% set body = h.jsonschema_get_resource_body(res) %}
-
-          {% set schema_type = h.jsonschema_get_resource_type(res) %}
-
           {% set opt = h.jsonschema_get_resource_opt(res) %}
-          <!-- TODO: BLOCK REUSE 4 PACKAGE templates/source/read.html -->
-          <!-- REGISTRY TYPE BASED GUARD supported_jsonschema_fields -->
-          <p>
-            <div>
-              <div style="width:90%;display: flex;margin-left:auto;margin-right:auto;justify-content: space-evenly;">
-                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#type" aria-expanded="false" aria-controls="type">Type</button>
-                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#body" aria-expanded="true" aria-controls="body">Full Metadata</button>
-                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#opt" aria-expanded="false" aria-controls="opt">Options</button>
-              </div>
-              <div class="col">
-                <div class="row">
-                  <div class="" id="body">
-                    <div class="card card-body">
-                      <!-- REGISTRY TYPE BASED GUARD supported_jsonschema_fields -->
-                    {% if body %}
-                    <p>
-                      <h3>Metadata:</h3>
-                      {{ reader.render_json(body) }}
-                    </p>
-                    {% endif %}
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="collapse" id="opt">
-                    <div class="card card-body">
-                      <!-- TODO REGISTRY TYPE BASED GUARD supported_jsonschema_fields -->
-                      {% if opt %}
-                      <p>
-                        <h3>Options:</h3>
-                        {{ reader.render_json(opt) }}
-                      </p>
-                      {% endif %}
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="collapse" id="type">
-                    <div class="card card-body">
-                      <!-- TODO REGISTRY TYPE BASED GUARD -->
-                      {% if schema_type %}
-                      <p>
-                        <h3>Type:</h3>
-                        {{ schema_type }}
-                      </p>
-                      {% endif %}
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </p>
+          
+          {% include 'source/jsonschema_buttons.html' %}
         {% endif %}
       </section>
     {% endif %}
