Replaced custom render_template with CKAN's

--- a/ckanext/jsonschema/templates/source/macros.html
+++ b/ckanext/jsonschema/templates/source/macros.html
@@ -1,6 +1,7 @@
 
 {% macro render_json_body(json) -%}
 
+<!--TODO: Check for data-sources plain object-->
 {% if json is string %}
   {{ json }}
 {% elif json is mapping %}
