--- a/ckanext/jsonschema/templates/package/snippets/view_form.html
+++ b/ckanext/jsonschema/templates/package/snippets/view_form.html
@@ -1,8 +1,8 @@
 {% import 'macros/form.html' as form %}
 
-{% set is_jsonschema_view = h.jsonschema_is_jsonschema_view(resource_view.view_type) %}
+{% set is_jsonschema = h.jsonschema_is_jsonschema_view(resource_view.view_type) %}
 
-{% if is_jsonschema_view %}
+{% if is_jsonschema %}
     {% include 'package/snippets/jsonschema_view_form.html' %}
 {% else %}
     {% ckan_extends %}
